fix: corrección del Dashboard refactor: reestructuración del funcionamiento de componentes